--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
 <header>
-    <h1>Your Video Library</h1>
-    <p class="subtitle">Forged in your honor.</p>
+    <h1>Biblioteka filmików</h1>
+    <p class="subtitle">Dla madzi.</p>
 </header>
 
 <main id="lists-container">
